# morpho_monitor

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  deploy.md  prompt.md
data/: alerts.json  orders.json  whitelist.json
src/: alert.rs  auth.rs  config.rs  error.rs  executor.rs  gql_monitor.rs  lib.rs  main.rs  models.rs  monitor.rs
src/api/: admin.rs  alerts.rs  auth.rs  mod.rs  orders.rs
static/: index.html
