[package]
name = "morpho_monitor"
version = "0.1.0"
edition = "2021"
description = "Multi-chain Morpho automated risk hedging & real-time alerting system"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Blockchain (Alloy) - using v2 for serde compatibility
alloy = { version = "2", features = [
    "providers",
    "transport-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "json-rpc",
] }

# SIWE (Sign-In with Ethereum)
siwe = "0.6"

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Axum extras (TypedHeader)
axum-extra = { version = "0.10", features = ["typed-header"] }

# Config
toml = "0.8"
dotenvy = "0.15"

# HTTP client (Feishu API)
reqwest = { version = "0.12", features = ["json"] }

# UUID (nonce generation)
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"

# Hex encoding
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# EIP-712 helpers (alloy already handles this via sol-types)
# typed-data via alloy

[dev-dependencies]
# Test fixtures
tempfile = "3"
# HTTP test client
reqwest = { version = "0.12", features = ["json"] }
# Mock server
wiremock = "0.6"
